glibc (2.23-5) UNRELEASED; urgency=medium

  * patches/hurd-i386/git-recvmsg.diff: New patch, fixes recvmsg on PF_LOCAL
    sockets with msg_name != NULL.  Closes: #833558.
  * hurd-i386/libpthread_version.diff: Really fix pthread_setcancelstate
    aliasing.
  * libc0.3.symbols.hurd-i386: Update symbols.

 -- Samuel Thibault <sthibault@debian.org>  Tue, 09 Aug 2016 01:45:00 +0200

glibc (2.23-4) unstable; urgency=medium

  [ Aurelien Jarno ]
  * patches/kfreebsd/local-sysdeps.diff: update to revision 6098 (from
    glibc-bsd).
  * debian/debhelper.in/libc.postinst: drop code to handle the /var/mail
    transition for pre-Potato installations.
  * debian/debhelper.in/libc.{preinst,postinst}, debian/script.in/nohwcap.sh:
    Remove fallback to dpkg --print-architecture for pre-multiarch systems.
  * debian/debhelper.in/libc.{preinst,postinst}: do not run the NSS check
    code from a chroot as it might not have an init system installed.
  * debian/testsuite-xfail-debian.mk: allow tst-robust8 to fail on amd64, it
    is an intermittent failure that might be due to a kernel issue.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 27 Jul 2016 00:39:51 +0200

glibc (2.23-3) unstable; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386/libpthread_version.diff: Update with pthread_setcancelstate
    aliasing.

  [ Aurelien Jarno ]
  * patches/kfreebsd/local-sysdeps.diff: update to revision 6097 (from
    glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 25 Jul 2016 23:23:29 +0200

glibc (2.23-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * Danish debconf translation update from Joe Hansen.  Closes: #830589.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 6096 (from
    glibc-bsd).

  [ Samuel Thibault ]
  * hurd-i386/cvs-libpthread-2.23.diff: Update, adds pthread_setcancelstate
    alias, fixes rsyslog start.
  * hurd-i386/cvs-tabdly.diff: New patch.  Closes: #830584.
  * hurd-i386/local-clock_gettime_MONOTONIC.diff: Complete patch with