@@ -5,6 +5,7 @@ glibc (2.23-5) UNRELEASED; urgency=medium
   * hurd-i386/libpthread_version.diff: Really fix pthread_setcancelstate
     aliasing.
   * libc0.3.symbols.hurd-i386: Update symbols.
+  * hurd-i386/tg-sysvshm.diff: Update from topgit.
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 09 Aug 2016 01:45:00 +0200
 
